[package]
edition = "2018"
name = "frogrs"
version = "0.1.0"

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", branch = "main"}
bevy_ggrs = {git = "https://github.com/JonathanPicques/bevy_ggrs.git", branch = "main"}
fixed = "1.10"
ggrs = "0.5.1"
rand = "0.8.3"
rapier2d = {version = "0.11.1", features = ["serde-serialize", "enhanced-determinism"]}
serde = "1.0.130"
structopt = "0.3"

[[bin]]
name = "frogrs_game"
path = "src/main_game.rs"

[[bin]]
name = "frogrs_synctest"
path = "src/main_synctest.rs"
